apps/kube-prometheus-stack/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels: {}
