apps/kube-prometheus-stack/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana
  namespace: observability
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - grafana.${cluster_name}.rbn.is
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: false
    - hosts:
        - grafana.${cluster_name}.rbn.is
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cert-grafana
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
    - grafana.${cluster_name}.rbn.is
  gateways:
    - grafana
  http:
    - name: grafana
      route:
        - destination:
            host: kube-prometheus-stack-grafana
